--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,15 @@ a {
 *:after {
     box-sizing: border-box;
 }
-/* .main-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+.main-wrapper {
+display: flex;
+justify-content: space-between;
+flex-direction: column;
+height: 100vh;
 }
-main {
-    margin: auto;
-} */
+.main {
+    flex: 1;
+}
 .header-wrapper {
     width: 990px;
     height: 89px;
@@ -34,6 +35,7 @@ main {
     display: flex;
     justify-content: space-between;
 }
+
 .logo {
     display: flex;
     margin-top: 24px;
@@ -236,7 +238,6 @@ height: 57%;
     margin: 30px auto;
     display: flex;
     justify-content: center;
-    background: #f90;
     /* flex-basis: 100%; */
     max-height: 100px;
 }
@@ -244,6 +245,7 @@ height: 57%;
     font-size: 15px;
     font-family: 'SegoeLight';
     color: #979797;
+    margin-bottom: 30px;
 }
 .footer-wrapper a {
     color: #979797;
